--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "prop-types": "^15.6.2",
     "react": "16.6.3",
     "react-native": "0.57.8",
-    "react-native-auto-height-image": "^1.0.5"
+    "react-native-auto-height-image": "^1.0.5",
+    "react-native-typography": "^1.4.0",
+    "react-native-vector-icons": "^6.1.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
